# talk2data

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg
prompts/: prompts.yml
